apps/base/jellyfin/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: jellyfin
  namespace: jellyfin
spec:
  replicas: 1
  selector:
    matchLabels:
      app: jellyfin
  template:
    metadata:
      labels:
        app: jellyfin
    spec:
      securityContext:
        runAsUser: 3004
        runAsGroup: 568
        fsGroup: 568
        supplementalGroups:
          - 44    # video group
          - 993   # render group
      containers:
      - name: jellyfin
        image: jellyfin/jellyfin:latest
        ports:
        - containerPort: 8096
        volumeMounts:
        - name: jellyfin-config
          mountPath: /config
        - name: jellyfin-media
          mountPath: /media
        - name: jellyfin-cache
          mountPath: /cache
        - name: dri
          mountPath: /dev/dri
        resources:
          limits:
            memory: "4Gi"
          requests:
            memory: "1Gi"
      volumes:
      - name: jellyfin-config
        persistentVolumeClaim:
          claimName: jellyfin-config-pvc
      - name: jellyfin-media
        persistentVolumeClaim:
          claimName: jellyfin-media-pvc
      - name: jellyfin-cache
        persistentVolumeClaim:
          claimName: jellyfin-cache-pvc
      - name: dri
        hostPath:
          path: /dev/dri
