apps/base/jellyfin/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: jellyfin
  name: jellyfin-service
  namespace: jellyfin
spec:
  ports:
  - port: 8096
    protocol: TCP
    targetPort: 8096
  selector:
    app: jellyfin
  type: LoadBalancer
